--- a/TipCalc.Forms.WPF/TipCalc.Forms.WPF.csproj
+++ b/TipCalc.Forms.WPF/TipCalc.Forms.WPF.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="SetWccDefinitions">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Xamarin.Forms.4.1.0.555618\build\Xamarin.Forms.props" Condition="Exists('..\packages\Xamarin.Forms.4.1.0.555618\build\Xamarin.Forms.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Target Name="SetWccDefinitions">
+  <Target Name="SetWccDefinitions" AfterTargets="Restore">
     <VariableConstants TaskAction="Set" Value="__WPF__" />
   </Target>
   <PropertyGroup>
